# save-editor-AGB-AY5E

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
docs/: TechnicalDetails.md  Usage.md
save_editor_AGB_AY5E/: application.py  constants.py  decks.py  enums.py  main.py  metadata.py  models.py  save.py  stats.py
save_editor_AGB_AY5E/resources/: application.glade  cards.csv  duelists.csv  menu.glade  packs.csv  styles.css
save_editor_AGB_AY5E/resources/pools/: 04.txt  09.txt  11.txt
src/: application.py  constants.py  deck.py  enums.py  main.py  metadata.py  models.py  save.py  window.py
src/resources/: app.glade  application.glade  card.glade  cards.csv  duelists.csv  menu.glade  styles.css
src/resources/pools/: 01.txt  02.txt  03.txt  05.txt  06.txt  07.txt  08.txt  10.txt
